# nano-compiler

./: CHANGELOG.md  nano-compiler.cabal
app/: Main.hs
src/: Ast.hs  CodeGen.hs  Compile.hs  MyLib.hs  Parser.hs
