cabal-version:      2.4
name:               nano-compiler
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             volesen
maintainer:         vincolesen@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Compile

    -- Modules included in this library but not exported.
    other-modules:
        Ast,
        Parser,
        CodeGen
        
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        mtl,
        containers,
        megaparsec,
        parser-combinators

    hs-source-dirs:   src
    default-language: Haskell2010

executable nano-compiler
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        optparse-applicative,
        nano-compiler

    hs-source-dirs:   app
    default-language: Haskell2010
